--- a/templates/forgetpwd.html
+++ b/templates/forgetpwd.html
@@ -2,12 +2,12 @@
 <html>
 {% load staticfiles %}
 <head>
-	<meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="renderer" content="webkit">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" >
-	<title>慕学网首页</title>
-	<link rel="stylesheet" type="text/css" href="{% static 'css/reset.css'  %}">
-	<link rel="stylesheet" type="text/css" href="{% static 'css/login.css'  %}">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+    <title>慕学网首页</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/reset.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
 </head>
 <body>
 <!--提示弹出框-->
@@ -38,8 +38,8 @@
         </div>
         <div class="error btns" id="jsSetNewPwdTips"></div>
         <div class="button">
-            <input type="hidden" name="mobile" id="jsInpResetMobil" />
-            <input id="jsSetNewPwdBtn" type="button" value="提交" />
+            <input type="hidden" name="mobile" id="jsInpResetMobil"/>
+            <input id="jsSetNewPwdBtn" type="button" value="提交"/>
         </div>
     </form>
 </div>
@@ -50,7 +50,7 @@
             <p class="fl hd-tips">慕学网，在线学习平台！</p>
             <ul class="fr hd-bar">
                 <li>服务电话：<span>33333333</span></li>
-                <li><a href="login.html">[登录]</a></li>
+                <li><a href="{% url 'login' %}">[登录]</a></li>
                 <li class="active"><a href="/forgetpwd/">[忘记密码]</a></li>
             </ul>
         </div>
@@ -60,16 +60,19 @@
     <div class="c-box bg-box">
         <div class="login-box clearfix">
             <div class="hd-login clearfix">
-                <a class="index-logo" href="index.html"></a>
+                <a class="index-logo" href="{% url 'index' %}"></a>
                 <h1>忘记密码</h1>
-                <a class="index-font" href="index.html">回到首页</a>
+                <a class="index-font" href="{% url 'index' %}">回到首页</a>
             </div>
             <div class="fl slide">
                 <div class="imgslide">
                     <ul class="imgs">
-                        <li><a href=""><img width="483" height="472" src="{% static 'images/57a801860001c34b12000460.jpg' %}" /></a></li>
-                        <li><a href=""><img width="483" height="472" src="{% static 'images/57a801860001c34b12000460.jpg' %}" /></a></li>
-                        <li><a href=""><img width="483" height="472" src="{% static 'images/57a801860001c34b12000460.jpg' %}" /></a></li>
+                        <li><a href=""><img width="483" height="472"
+                                            src="{% static 'images/57a801860001c34b12000460.jpg' %}"/></a></li>
+                        <li><a href=""><img width="483" height="472"
+                                            src="{% static 'images/57a801860001c34b12000460.jpg' %}"/></a></li>
+                        <li><a href=""><img width="483" height="472"
+                                            src="{% static 'images/57a801860001c34b12000460.jpg' %}"/></a></li>
                     </ul>
                 </div>
                 <div class="unslider-arrow prev"></div>
@@ -78,20 +81,22 @@
             <div class="fl form-box">
                 <h2>忘记密码</h2>
                 <form id="jsFindPwdForm" method="post" action="{% url "forgetpwd" %}" autocomplete="off">
-                    <div class="form-group marb20 ">
+                    <div class="form-group marb20 {% if forgetpwd_form.errors.email %}errorput{% endif %}">
                         <label>帐&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;号</label>
-                        <input type="text" id="account" name="email" value="" placeholder="邮箱" />
+                        <input type="text" id="account" name="email"
+                               value="{% if forgetpwd_form.email.value %}{{ forgetpwd_form.email.value }}{% endif %}"
+                               placeholder="邮箱"/>
                     </div>
-                    <div class="form-group captcha1 marb38">
+                    <div class="form-group captcha1 marb38 {% if forgetpwd_form.errors.email %}errorput{% endif %}">
                         <label>验&nbsp;证&nbsp;码</label>
-                            {{ forgetpwd_form.captcha }}
+                        {{ forgetpwd_form.captcha }}
                     </div>
                     <div class="error btns" id="jsForgetTips"></div>
-                        {% for key,error in forgetpwd_form.errors.items %}{{ error }}{% endfor %} {{ msg }}
+                    {% for key,error in forgetpwd_form.errors.items %}{{ error }}{% endfor %} {{ msg }}
                     <input type="hidden" name="sms_type" value="1">
-                    <input class="btn btn-green" id="jsFindPwdBtn" type="submit" value="提交" />
-                    <p class="form-p" style="bottom:40px;">您还可以<a href="login.html"> [直接登录]</a></p>
-                {% csrf_token %}
+                    <input class="btn btn-green" id="jsFindPwdBtn" type="submit" value="提交"/>
+                    <p class="form-p" style="bottom:40px;">您还可以<a href="{% url 'login' %}"> [直接登录]</a></p>
+                    {% csrf_token %}
                 </form>
             </div>
         </div>
@@ -101,7 +106,7 @@
 <input id="isLogin" type="hidden" value="False"/>
 <script src="{% static 'js/jquery.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'js/unslider.js' %}" type="text/javascript"></script>
-<script src="{% static 'js/validateDialog.js' %}"  type="text/javascript"></script>
-<script src="{% static 'js/login.js' %}"  type="text/javascript"></script>
+<script src="{% static 'js/validateDialog.js' %}" type="text/javascript"></script>
+<script src="{% static 'js/login.js' %}" type="text/javascript"></script>
 </body>
 </html>
