--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-    <title>课程机构列表 - 慕学在线网</title>
+    <title>首页 - 慕学在线网</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/reset.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/animate.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
@@ -25,17 +25,18 @@
                     {% if request.user.is_authenticated %}
                         <div class="personal">
                             <dl class="user fr">
-                                <dd>bobby<img class="down fr" src="{% static 'images/top_down.png' %}"/></dd>
+                                <dd>{{ request.user.nick_name }}<img class="down fr"
+                                                                    src="{% static 'images/top_down.png' %}"/></dd>
                                 <dt><img width="20" height="20"
-                                         src="{% static 'media/image/2016/12/default_big_14.png' %}"/></dt>
+                                         src="{{ MEDIA_URL }}{{ request.user.image }}"/></dt>
                             </dl>
                             <div class="userdetail">
                                 <dl>
                                     <dt><img width="80" height="80"
-                                             src="{% static 'media/image/2016/12/default_big_14.png' %}"/></dt>
+                                             src="{{ MEDIA_URL }}{{ request.user.image }}"/></dt>
                                     <dd>
-                                        <h2>django</h2>
-                                        <p>bobby</p>
+                                        <h2>{{ request.user.username }}</h2>
+                                        <p>{{ request.user.nick_name }}</p>
                                     </dd>
                                 </dl>
                                 <div class="btn">
@@ -53,7 +54,7 @@
 
             <div class="middle">
                 <div class="wp">
-                    <a href="index.html"><img class="fl" src="{% static 'images/logo.jpg' %}"/></a>
+                    <a href="{% url 'index' %}"><img class="fl" src="{% static 'images/logo.jpg' %}"/></a>
                     <div class="searchbox fr">
                         <div class="selectContainer fl">
                             <span class="selectOption" id="jsSelectOption" data-value="course">
@@ -78,14 +79,14 @@
                         <ul>
                             <li class="active"><a href="{% url 'index' %}">首页</a></li>
                             <li>
-                                <a href="course-list.html">
+                                <a href="{% url 'course:course_list' %}">
                                     公开课<img class="hot" src="{% static 'images/nav_hot.png' %}">
                                 </a>
                             </li>
                             <li>
-                                <a href="teachers-list.html">授课教师</a>
+                                <a href="{% url 'org:teacher_list' %}">授课教师</a>
                             </li>
-                            <li><a href="{% url 'org_list' %}">授课机构</a></li>
+                            <li><a href="{% url 'org:org_list' %}">授课机构</a></li>
                         </ul>
                     </div>
                 </div>
@@ -380,7 +381,7 @@
                         <li class="">
                             <a href="org-detail-homepage.html">
                                 <div class="company">
-                                    <img width="184" height="100" src="{% static 'media/org/2016/11/njdx.jpg'%}"/>
+                                    <img width="184" height="100" src="{% static 'media/org/2016/11/njdx.jpg' %}"/>
                                     <div class="score">
                                         <div class="circle">
                                             <h2>全国知名</h2>
@@ -394,7 +395,8 @@
                         <li class="five">
                             <a href="org-detail-homepage.html">
                                 <div class="company">
-                                    <img width="184" height="100" src="{% static 'media/org/2016/11/imooc_klgAUn5.png' %}"/>
+                                    <img width="184" height="100"
+                                         src="{% static 'media/org/2016/11/imooc_klgAUn5.png' %}"/>
                                     <div class="score">
                                         <div class="circle">
                                             <h2>全国知名</h2>
@@ -408,7 +410,8 @@
                         <li class="">
                             <a href="org-detail-homepage.html">
                                 <div class="company">
-                                    <img width="184" height="100" src="{% static 'media/org/2016/11/imooc_Gn1sRjp.png' %}"/>
+                                    <img width="184" height="100"
+                                         src="{% static 'media/org/2016/11/imooc_Gn1sRjp.png' %}"/>
                                     <div class="score">
                                         <div class="circle">
                                             <h2>全国知名</h2>
@@ -422,7 +425,8 @@
                         <li class="">
                             <a href="org-detail-homepage.html">
                                 <div class="company">
-                                    <img width="184" height="100" src="{% static 'media/org/2016/11/imooc_Y2Tonsq.png' %}"/>
+                                    <img width="184" height="100"
+                                         src="{% static 'media/org/2016/11/imooc_Y2Tonsq.png' %}"/>
                                     <div class="score">
                                         <div class="circle">
                                             <h2>全国知名</h2>
@@ -436,7 +440,8 @@
                         <li class="">
                             <a href="org-detail-homepage.html">
                                 <div class="company">
-                                    <img width="184" height="100" src="{% static 'media/org/2016/11/imooc_OO2ykYP.png' %}"/>
+                                    <img width="184" height="100"
+                                         src="{% static 'media/org/2016/11/imooc_OO2ykYP.png' %}"/>
                                     <div class="score">
                                         <div class="circle">s
                                             <h2>全国知名</h2>
@@ -450,7 +455,8 @@
                         <li class="">
                             <a href="org-detail-homepage.html">
                                 <div class="company">
-                                    <img width="184" height="100" src="{% static 'media/org/2016/11/imooc_V0TJOyb.png' %}"/>
+                                    <img width="184" height="100"
+                                         src="{% static 'media/org/2016/11/imooc_V0TJOyb.png' %}"/>
                                     <div class="score">
                                         <div class="circle">
                                             <h2>全国知名</h2>
@@ -464,7 +470,8 @@
                         <li class="five">
                             <a href="org-detail-homepage.html">
                                 <div class="company">
-                                    <img width="184" height="100" src="{% static 'media/org/2016/11/imooc_qEaMov1.png' %}"/>
+                                    <img width="184" height="100"
+                                         src="{% static 'media/org/2016/11/imooc_qEaMov1.png' %}"/>
                                     <div class="score">
                                         <div class="circle">
                                             <h2>全国知名</h2>
@@ -492,7 +499,8 @@
                         <li class="">
                             <a href="org-detail-homepage.html">
                                 <div class="company">
-                                    <img width="184" height="100" src="{% static 'media/org/2016/12/imooc_Gn1sRjp.png' %}"/>
+                                    <img width="184" height="100"
+                                         src="{% static 'media/org/2016/12/imooc_Gn1sRjp.png' %}"/>
                                     <div class="score">
                                         <div class="circle">
                                             <h2>全国知名</h2>
@@ -506,7 +514,8 @@
                         <li class="">
                             <a href="org-detail-homepage.html">
                                 <div class="company">
-                                    <img width="184" height="100" src="{% static 'media/org/2016/12/bjdx_cCpdUw8.jpg' %}"/>
+                                    <img width="184" height="100"
+                                         src="{% static 'media/org/2016/12/bjdx_cCpdUw8.jpg' %}"/>
                                     <div class="score">
                                         <div class="circle">
                                             <h2>全国知名</h2>
@@ -520,7 +529,8 @@
                         <li class="">
                             <a href="org-detail-homepage.html">
                                 <div class="company">
-                                    <img width="184" height="100" src="{% static 'media/org/2016/12/imooc_klgAUn5.png' %}"/>
+                                    <img width="184" height="100"
+                                         src="{% static 'media/org/2016/12/imooc_klgAUn5.png' %}"/>
                                     <div class="score">
                                         <div class="circle">
                                             <h2>全国知名</h2>
@@ -534,7 +544,8 @@
                         <li class="five">
                             <a href="org-detail-homepage.html">
                                 <div class="company">
-                                    <img width="184" height="100" src="{% static 'media/org/2016/12/bjdx_bcd0m07.jpg' %}"/>
+                                    <img width="184" height="100"
+                                         src="{% static 'media/org/2016/12/bjdx_bcd0m07.jpg' %}"/>
                                     <div class="score">
                                         <div class="circle">
                                             <h2>全国知名</h2>
